--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,22 +1,21 @@
 .footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-  }
-  
-  .footerContent {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-    padding: 0 20px;
-  }
-  
-  .copyRight {
-    font-size: 12px;
-  }
-  
+  background-color: #4f0000;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
+.footerContent {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 50%;
+  padding: 0 20px;
+}
+
+.copyRight {
+  font-size: 12px;
+}
